Fixed achievements icon being off centered

--- a/css/main.css
+++ b/css/main.css
@@ -99,8 +99,10 @@ section {
     margin: 7.5px 5px;
 }
 #btnDeposit { bottom: 40px }
-#LeftArrow, #RightArrow, #ach { background: #4c4c4c 80%/80% no-repeat }
-#LeftArrow, #RightArrow { background-image: url(https://blib.tk/bcl/img/arrow.svg) }
+#LeftArrow, #RightArrow {
+    background: #4c4c4c 80%/80% no-repeat;
+    background-image: url(https://blib.tk/bcl/img/arrow.svg);
+}
 .arrow:active { background-color: #555 !important }
 .arrow {
     border-radius: 27px;
@@ -115,7 +117,7 @@ section {
 #LeftArrow { transform: rotate(180deg) }
 #ach {
     top: calc(50% + 10px);
-    background-image: url(https://blib.tk/bcl/img/star.svg)
+    background: #4c4c4c 50%/80% no-repeat url(https://blib.tk/bcl/img/star.svg);
 }
 #leftSection {
     display: none;
